STB-2204 - Test Coverage added